refactor(gateway): 重构网关核心过滤器和路由处理机制
- 修改 AbstractFilter 中的链式调用方法为 doFilter(exchange)
- 删除 AuthFilter、CorsFilter 和 CorsPostFilter 三个过滤器实现
- 新增 DefaultFilterChain 实现责任链模式的过滤器执行
- 优化 DefaultHttpServerExchange 避免请求内容的不必要复制
- 重构 DefaultRoute 类使用建造者模式并分离前后置过滤器
- 在 GatewayProcessor 中实现新的过滤器执行逻辑
- 移除 NoOpFilterChain 内部类
- 更新 gateway-routes.yml 配置启用 PATH_REWRITE 过滤器
- 调整 GatewayBootstrap 中的服务和过滤器配置处理逻辑